changement page produits rajout profil

--- a/products.html
+++ b/products.html
@@ -13,13 +13,13 @@
 <body>
     <!-- NAVBAR -->
     <header class="my-5 container">
-        <!-- MOBILE -->
 
+        <!-- MOBILE -->
         <nav
             class="d-md-none d-flex flex-wrap justify-content-between align-content-center align-items-center w-100 px-3">
             <i class="fa-solid fs-2 fa-bars burger-icon" onclick="navbarEffect.run()"></i>
             <i class="fa-solid fa-xmark cross-icon text-light hide fs-2" onclick="navbarEffect.run()"></i>
-            <img src="public/assets/img/profil/brandIcon.png" alt="icon de la marque">
+            <img src="public/assets/img/home-page/brandIcon.png" alt="icon de la marque">
             <i class="fa-solid fs-2 fa-magnifying-glass" onclick="navbarEffect.runSearch()"></i>
             <ul class="position-absolute fs-4 menu hide-menu">
                 <li><a href="./home.html">Accueil</a></li>
@@ -27,15 +27,15 @@
                 <li><a href="./products.html">Échanges</a></li>
                 <li><a href="./aboutus.html">À propos</a></li>
                 <li><a href="./questions.html">FAQ</a></li>
-                <li><a href="">Inscription</a></li>
-                <li><a href="">Connexion</a></li>
+                <li><a href="./user_personal_profil.html">Profil</a></li>
+
             </ul>
             <input type="search" class="w-75 mx-auto search-bar mt-5 hide">
         </nav>
 
-        <!-- UP THAN MOBILE -->
+        <!-- UP TO MOBILE LANDSCAPE -->
         <nav class="d-none d-md-flex justify-content-between align-items-around w-100 align-content-center">
-            <img src="public/assets/img/profil/brandIcon.png" class="ms-2" alt="icon de la marque">
+            <img src="public/assets/img/home-page/brandIcon.png" class="ms-2" alt="icon de la marque">
             <div class="w-100 d-flex flex-wrap justify-content-end align-content-between me-4">
                 <ul class="w-100 text-end p-0">
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen active_nav"
@@ -50,8 +50,8 @@
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
                             href="./questions.html">FAQ</a>
                     </li>
-                    <li class="d-inline ms-lg-5 ms-md-2 ms-3">
-                        <i class="fa-solid fa-user d-inline text_darkgreen"></i>
+                    <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
+                            href="./user_personal_profil.html">Profil</a>
                     </li>
                 </ul>
                 <div class="w-50 mx-auto">
@@ -62,7 +62,6 @@
         </nav>
 
     </header>
-
     <main>
         <!-- hero -->
         <div class="container hero d-flex align-items-center text-md-start mb-5">
