--- a/profil.html
+++ b/profil.html
@@ -103,7 +103,7 @@
                 <div class="bg_lightgreen banner-profil w-100 position-absolute container-fluid ">
 
                 </div>
-                <img class="img-profil" src="public/assets/img/profil/profil1.png" alt="image de profil">
+                <img class="img-profil" src="/public/assets/img/product/user-photo.png" alt="image de profil">
                 <div class="w-100 text-center mt-4 text_orange">
                     <i class="fa-solid fa-star p-1"></i>
                     <i class="fa-solid fa-star p-1"></i>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="my-3">
                     <p class="text_titlegreen fs-3">
-                        Alice - 37 ans - NYC
+                        Sophie - 34 ans - Lyon
                     </p>
                 </div>
             </div>
