--- a/product.html
+++ b/product.html
@@ -102,7 +102,7 @@
                     <div class="row">
                         <div class="col-12 text-center">
                             <img src="./public/assets/img/product/user-photo.png" alt="photo de profil" class="pp p-3">
-                            <p>Sophie Jane</p>
+                            <p><a href="./profil.html" class="no-underline text_titlegreen">Sophie Jane</a></p>
                             <p>34 ans</p>
                             <p>Lyon</p>
                             <img src="./public/assets/img/product/Group8.png" alt="4.5 étoile sur 5">
