--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <img src="public/assets/img/home-page/brandIcon.png" alt="icon de la marque">
             <i class="fa-solid fs-2 fa-magnifying-glass" onclick="navbarEffect.runSearch()"></i>
             <ul class="position-absolute fs-4 menu hide-menu">
-                <li><a href="./home.html">Accueil</a></li>
-                <li><a href="#evenements">Évènements</a></li>
-                <li><a href="./products.html">Échanges</a></li>
-                <li><a href="./aboutus.html">À propos</a></li>
-                <li><a href="./questions.html">FAQ</a></li>
-                <li><a href="./user_personal_profil.html">Profil</a></li>
-
+                <li><a href="">Accueil</a></li>
+                <li><a href="">Évènements</a></li>
+                <li><a href="">Échanges</a></li>
+                <li><a href="">À propos</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Inscription</a></li>
+                <li><a href="">Connexion</a></li>
             </ul>
             <input type="search" class="w-75 mx-auto search-bar mt-5 hide">
         </nav>
@@ -39,19 +39,18 @@
             <div class="w-100 d-flex flex-wrap justify-content-end align-content-between me-4">
                 <ul class="w-100 text-end p-0">
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen active_nav"
-                            href="./home.html">Accueil</a></li>
+                            href="">Accueil</a></li>
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
-                            href="#evenements">Évènements</a></li>
+                            href="">Évènements</a></li>
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
-                            href="./products.html">Échanges</a></li>
-                    <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
-                            href="./aboutus.html">À
+                            href="">Échanges</a></li>
+                    <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen" href="">À
                             propos</a></li>
-                    <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
-                            href="./questions.html">FAQ</a>
+                    <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen" href="">FAQ</a>
                     </li>
-                    <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
-                            href="./user_personal_profil.html">Profil</a>
+                    <li class="d-inline ms-lg-5 ms-md-2 ms-3">
+                        <i class="fa-solid fa-user d-inline text_darkgreen" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal"></i>
                     </li>
                 </ul>
                 <div class="w-50 mx-auto">
@@ -60,6 +59,39 @@
                 </div>
             </div>
         </nav>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header mx-auto">
+                        <h5 class="modal-title text_darkgreen fw-bold fs-4" id="exampleModalLabel"> Se connecter</h5>
+                        <button type="button" class="btn-close position-absolute end-0 m-2" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="recipient-name" class="col-form-label">Email :</label>
+                                <input type="email" class="form-control" id="recipient-name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="message-text" class="col-form-label">Password :</label>
+                                <input type="password" class="form-control" id="message-text">
+                            </div>
+                            <div class="text-end">
+                                <a href="#">Mot de passe oublié ?</a>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn rounded-24 bg_lightgreen text-light mx-auto my-3"> <a
+                                href="./home.html">Connexion</a></button>
+                        <a href="" class="text_orange w-100 text-center mb-3">Pas encore inscrit ? Inscrivez vous
+                            ici.</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </header>
 
@@ -76,7 +108,7 @@
 
     <section class="container-fluid text-center my-5">
         <div class="container">
-            <p class="p-3 my-5 bg_silver">
+            <p class="p-3 my-5 bg_lightgreen text-light">
                 Bienvenue sur Greeny, le site communautaire dédié aux amoureux de la nature et du jardinage ! Sur
                 Greeny, vous pouvez partager, échanger et découvrir une variété de graines, semences, fleurs et arbustes
                 avec une communauté passionnée. Que vous soyez un novice en jardinage ou un vétéran chevronné, Greeny
@@ -102,6 +134,7 @@
                         alt="image bouture">
                     <p class="mt-4 fw-bold text_darkgreen">Arbres / Arbustes</p>
                 </div>
+                <button class="mx-auto my-5 bg_lightgreen text-light col-3 btn">Voir nos produits</button>
             </div>
         </div>
     </section>
@@ -196,7 +229,7 @@
     </section>
 
     <section class="container container-temoignage py-5 text-center">
-        <h2 class="fw-bold text-center mb-5">TEMOIGNAGES</h2>
+        <h2 class="fw-bold text_titlegreen text-center mb-5">TEMOIGNAGES</h2>
         <!-- SLIDER FOR MOBILE -->
         <div class="temoignage-card col-md-4 d-md-none my-5">
             <img class="my-4" src="public/assets/img/home-page/image 12.png" alt="photos_profils_temoignages">
@@ -259,28 +292,28 @@
     </section>
 
     <footer>
-        <div class="container-fluid bg_orange mb-0">
+        <div class="container-fluid bg_orange mb-0 py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-12">
-                        <p class="text-light mt-3 mb-0 text-center text-lg-start">LaManuEcology</p>
+                        <p class="text-light mt-3 mb-0 text-center text-lg-start">LaManuÉcologie</p>
                         <p class="text-light mb-0 text-center text-lg-start">238 Earls Ct Rd, Londres SW5 9AA</p>
                         <p class="text-light mb-0 text-center text-lg-start">+44 20 7123 4567</p>
                         <p class="text-light text-center text-lg-start">contact@lamanuecology.com</p>
                     </div>
                     <div class="col-lg-4 d-flex justify-content-center align-items-center">
-                        <a href=""><img src="./public/assets/img/questions-page/icon_ig.png" height="30" class="m-2"
-                                alt="Logo Instagram"></a>
-                        <a href=""><img src="./public/assets/img/questions-page/icon_twitter.png" height="30"
-                                class="m-2" alt="Logo Twitter / X"></a>
-                        <a href=""><img src="./public/assets/img/questions-page/icon_fb.png" height="30" class="m-2"
-                                alt="Logo Facebook"></a>
+                        <img src="./public/assets/img/home-page/icon_ig.png" height="30" class="m-2"
+                            alt="Logo Instagram">
+                        <img src="./public/assets/img/home-page/icon_twitter.png" height="30" class="m-2"
+                            alt="Logo Twitter / X">
+                        <img src="./public/assets/img/home-page/icon_fb.png" height="30" class="m-2"
+                            alt="Logo Facebook">
                     </div>
                     <div class="col-lg-4 col-md-12">
                         <p class="mt-3 mb-0 text-center text-lg-end"><a class="text-decoration-none
-                            text-light" href="./aboutus.html">À propos</a></p>
+                            text-light" href="">À propos</a></p>
                         <p class="mb-0 text-center text-lg-end"> <a class="text-decoration-none
-                            text-light" href="./questions.html">F.A.Q & Contact</a></p>
+                            text-light" href="">F.A.Q & Contact</a></p>
                         <p class="mb-0 text-center text-lg-end"><a class="text-decoration-none
                             text-light" href="">Mentions Légales</a></p>
                         <p class="mb-0 text-center text-lg-end"><a class="text-decoration-none
@@ -293,6 +326,7 @@
             </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
