ajouts events + correction événements

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <!-- NOS EVENEMENTS -->
 
-    <section class="container-fluid container-events my-5 bg_lightgreen py-5 text-center">
+    <section id="evenements" class="container-fluid container-events my-5 bg_lightgreen py-5 text-center">
         <h2 class="text-center text-light fw-bold">NOS EVENEMENTS</h2>
 
         <!-- MOBILE -->
