--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             <i class="fa-solid fs-2 fa-magnifying-glass" onclick="navbarEffect.runSearch()"></i>
             <ul class="position-absolute fs-4 menu hide-menu">
                 <li><a href="./home.html">Accueil</a></li>
-                <li><a href="#evenements">Évènements</a></li>
+                <li><a href="#evenements">Événements</a></li>
                 <li><a href="./products.html">Échanges</a></li>
                 <li><a href="./aboutus.html">À propos</a></li>
                 <li><a href="./questions.html">FAQ</a></li>
@@ -41,7 +41,7 @@
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen active_nav"
                             href="./home.html">Accueil</a></li>
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
-                            href="#evenements">Évènements</a></li>
+                            href="#evenements">Événements</a></li>
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
                             href="./products.html">Échanges</a></li>
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen"
@@ -109,7 +109,7 @@
 
     <!-- NOS EVENEMENTS -->
 
-    <section class="container-fluid container-events my-5 bg_lightgreen py-5 text-center">
+    <section id="evenements" class="container-fluid container-events my-5 bg_lightgreen py-5 text-center">
         <h2 class="text-center text-light fw-bold">NOS EVENEMENTS</h2>
 
         <!-- MOBILE -->
