--- a/home.html
+++ b/home.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greeny</title>
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/assets/css/style.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./public/assets/css/style.css">
 </head>
 
 <body>
@@ -76,7 +75,7 @@
 
     <section class="container-fluid text-center my-5">
         <div class="container">
-            <p class="p-3 my-5 bg_silver">
+            <p class="p-3 my-5 text_darkgreen">
                 Bienvenue sur Greeny, le site communautaire dédié aux amoureux de la nature et du jardinage ! Sur
                 Greeny, vous pouvez partager, échanger et découvrir une variété de graines, semences, fleurs et arbustes
                 avec une communauté passionnée. Que vous soyez un novice en jardinage ou un vétéran chevronné, Greeny
@@ -105,6 +104,7 @@
             </div>
         </div>
     </section>
+
 
 
     <!-- NOS EVENEMENTS -->
@@ -231,30 +231,42 @@
             <div class="temoignage-card col-md-4">
                 <img class="my-4" src="public/assets/img/home-page/image 12.png" alt="photos_profils_temoignages">
                 <div>
-                    <p class="my-5 blub mx-auto">
-                        “ Le Lorem Ipsum est simplement du faux texte employé dans la co impression. Le Lorem Ipsum est
-                        le faux texte standard
+                    <p class="mx-auto">Greg</p>
+                    <p class="mb-5 blub mx-auto">
+                        On m’a recommandé Grenny pour échanger avec d’autres utilisateurs et obtenir divers conseils
+                        pour débuter. Depuis, on est devenu amis, et nous sommes restés en contact
                     </p>
                 </div>
             </div>
             <div class="temoignage-card col-md-4">
                 <img class="my-4" src="public/assets/img/home-page/image 11.png" alt="photos_profils_temoignages">
                 <div>
-                    <p class="my-5 blub mx-auto">
-                        “ Le Lorem Ipsum est simplement du faux texte employé dans la co impression. Le Lorem Ipsum est
-                        le faux texte standard
+                    <p class="mx-auto">Le père de Greg</p>
+                    <p class="mb-5 blub mx-auto">
+                        J’ai assisté à un événement qui était mis en place dans le calendrier du site, c’était dans la
+                        ville voisine et j’ai rencontré pleins de passionnés comme moi et nous avons discuté toute la
+                        journée de jardinage.
                     </p>
                 </div>
             </div>
             <div class="temoignage-card col-md-4">
                 <img class="my-4" src="public/assets/img/home-page/image 10.png" alt="photos_profils_temoignages">
                 <div>
-                    <p class="my-5 blub mx-auto">
-                        “ Le Lorem Ipsum est simplement du faux texte employé dans la co impression. Le Lorem Ipsum est
-                        le faux texte standard
+                    <p class="mx-auto">Lisa Bianci</p>
+                    <p class="mb-5 blub mx-auto">
+                        Je me suis inscrite sur Greeny car j’ai commencé à aménager mon jardin, et j’y ai trouvé tout
+                        les articles qu’il me fallait.
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
+    <section>
+        <div class="text-center">
+            <button type="button"
+                class="d-flex justify-content-center col-6 col-lg-2 mx-auto mb-5 bg_lightgreen text-light border-0 no-hover shadow rounded-24 prevent-hover p-2"><a
+                    class="text-light" href="./localisation.html">Producteurs près de
+                    chez vous</a></button>
         </div>
     </section>
 
@@ -293,9 +305,7 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/afc6a54030.js" crossorigin="anonymous"></script>
     <script src="public/assets/js/index.js"></script>
 </body>
