--- a/localisation.html
+++ b/localisation.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon profil - Greeny</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="./public/assets/css/style.css">
 </head>
 
@@ -20,7 +18,7 @@
             class="d-md-none d-flex flex-wrap justify-content-between align-content-center align-items-center w-100 px-3">
             <i class="fa-solid fs-2 fa-bars burger-icon" onclick="navbarEffect.run()"></i>
             <i class="fa-solid fa-xmark cross-icon text-light hide fs-2" onclick="navbarEffect.run()"></i>
-            <img src="public/assets/img/home-page/brandIcon.png" alt="icon de la marque">
+            <a href="./home.html"> <img src="public/assets/img/home-page/brandIcon.png" alt="icon de la marque"> </a>
             <i class="fa-solid fs-2 fa-magnifying-glass" onclick="navbarEffect.runSearch()"></i>
             <ul class="position-absolute fs-4 menu hide-menu">
                 <li><a href="./home.html">Accueil</a></li>
@@ -36,7 +34,8 @@
 
         <!-- UP TO MOBILE LANDSCAPE -->
         <nav class="d-none d-md-flex justify-content-between align-items-around w-100 align-content-center">
-            <img src="public/assets/img/home-page/brandIcon.png" class="ms-2" alt="icon de la marque">
+            <a href="./home.html"> <img src="public/assets/img/home-page/brandIcon.png" class="ms-2"
+                    alt="icon de la marque"> </a>
             <div class="w-100 d-flex flex-wrap justify-content-end align-content-between me-4">
                 <ul class="w-100 text-end p-0">
                     <li class="d-inline ms-lg-5 ms-md-2 ms-3"><a class="fw-bold fs-6 text_darkgreen active_nav"
@@ -75,17 +74,22 @@
             </p>
         </div>
 
-        <div id="loading-spinner" class="row">
+        <div id="loading-spinner" class="row mb-3">
             <div class="spinner-border col-2" role="status"></div>
-            <p class="col-10">Un peu de patience, nous recherchons les producteurs les plus proches de chez vous... :)
+            <p class="col-10 text_orange">Un peu de patience, nous recherchons les producteurs les plus proches de
+                chez vous... :)
             </p>
         </div>
 
+        <div class="pb-2 text-center">
+            <input type="text" id="cityInput" class="rounded-24 p-1 col-5 col-md-2" placeholder="Ville">
+            <input type="text" id="codePostal" class="rounded-24 p-1 col-5 col-md-2" placeholder="Code postal">
+            <button onclick="searchCityAndDisplay()"
+                class="btn btn-primary col-5 col-md-2 m-2 m-md-0 mx-auto bg_lightgreen border-0 no-hover shadow rounded-24 prevent-hover">Rechercher</button>
+        </div>
+
         <div id="map"></div>
-
-
     </main>
-
 
     <footer>
         <div class="container-fluid bg_orange mb-0">
@@ -124,13 +128,9 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/afc6a54030.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <script src="./node_modules/leaflet/dist/leaflet.js"></script>
     <script src="./public/assets/js/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 
 </html>
